kubernetes/echo_server/echo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo
  labels:
    run: echo-server
