kubernetes/echo_server/echo-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: echo
spec:
  selector:
    matchLabels:
      app: echoserver
  replicas: 2 
  template: 
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - name: echoserver
        image: gcr.io/google_containers/echoserver:1.10
        ports:
        - containerPort: 8080
