kubernetes/echo_server/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  labels: 
    app: echo
  namespace: echo
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: echoserver
