kubernetes/echo_server/echo-ingress-sticky-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  labels:
    run: echo-ingress
  namespace: echo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "sticky_route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - echo.roylab.com
    secretName: echo-cert
  rules:
  - host: echo.roylab.com
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echo-service
          servicePort: 8443
      rules:
