kubernetes/echo_server/echo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  labels:
    run: echo-ingress
  namespace: echo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
  - hosts:
    - echo.roylab.com
  rules:
  - host: echo.roylab.com
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echo-service
          servicePort: 8080
      rules:
